# votelley-backend

./: .gitignore  README.md
HEVoting/: .gitignore  CMakeLists.txt  config.json  private.pem
HEVoting/ca/: CA.key
HEVoting/controllers/: VotingController.cc  heVote_UserController.cc
HEVoting/libsodium/: README.markdown
HEVoting/models/: Admins.cc  Admins.h  Candidate.cc  Candidate.h  Poll.cc  Poll.h  Users.cc  Users.h  Vote.cc  Vote.h  model.json
HEVoting/models/vote/: Vote.cc  Vote.h
HEVoting/test/: CMakeLists.txt
HEVoting/test-hevoting-angular/: angular.json  package.json
HEVoting/test-hevoting-angular/src/app/landing-page/: landing-page.component.html
